chore: build logic changes